--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "operations on arrays of promises",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "doc": "jsdoc2md --template doc/README.hbs --files lib/arrayp.js > api.md"
+    "test": "mocha",
+    "prepublish": "test"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "lodash": "^4.17.4",
-    "mocha": "^3.4.2",
-    "jsdoc-to-markdown": "^3.0.0"
+    "mocha": "^3.4.2"
   },
   "dependencies": {
   }
