--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arrayp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "operations on arrays of promises",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,5 @@
     "lodash": "^4.17.4",
     "mocha": "^3.4.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
